UX: FIx usercard position if not visible

--- a/scss/desktop/fkb-d-user.scss
+++ b/scss/desktop/fkb-d-user.scss
@@ -9,6 +9,13 @@
   border-radius: var(--d-default-border-radius);
 }
 
+.user-card,
+.group-card {
+  &:not(.show) {
+    position: absolute !important;
+  }
+}
+
 .user-card {
   .first-row {
     .user-card-avatar {
